--- a/config.json
+++ b/config.json
@@ -1,1 +1,15 @@
-
+{
+	"name": "Solius Reader",
+	"version": "0.1.4",
+	"slug": "soliusreader",
+	"homeassistant_api": "no",
+	"hassio_api": true,
+	"description": "Put a webcam in front of your Solius controller and let AWS push the readings over mqtt",
+	"url": "https://github.com/apaneiro/solius_reader",
+	"startup": "application",
+	"boot": "auto",
+	"arch": ["aarch64", "amd64", "armv7", "i386"],
+	"options": {"upd_interval":600, "url":"127.0.0.1", "user":"none", "password":"none", "aws_access_key_id":null, "aws_secret_access_key":null, "region":"us-east-2", "mqtt_host":"127.0.0.1", "mqtt_port":1883, "mqtt_user":"Mosquitto", "mqtt_pwd":"mqtt_pwd", "mqtt_topic":"solius", "verbose":0},
+	"schema": {"upd_interval":"int", "url":"str", "user":"str", "password":"str", "aws_access_key_id":"str", "aws_secret_access_key":"str", "region":"str", "mqtt_host":"str", "mqtt_port":"int", "mqtt_user":"str", "mqtt_pwd":"str", "mqtt_topic":"str", "verbose":"int"},
+	"map": ["config:rw"]
+}
