--- a/repository.yaml
+++ b/repository.yaml
@@ -1,1 +1,4 @@
-
+# https://developers.home-assistant.io/docs/add-ons/repository#repository-configuration
+name: apaneiro add-on repository
+url: 'https://github.com/aapaneiro/solius_reader'
+maintainer: apaneiro <apaneiro@gmail.com>
